style.css
/* Google font */

@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap');
:root {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-family: 'Roboto', sans-serif;
    /* Color Palette */
    --white: white;
    --off-white: #F5F5F5;
    --black: black;
    --off-black: rgb(30, 30, 30);
    --green: #23CCA2;
    --purple: #5A39A2;
    --off-purple: #5a39a2bd;
    --orange: #fe492c;
    --yellow: #ffd200;
    /*  */
    --default-shadow: 0px 5px 10px var(--black);
    --text-shadow: 2px 2px 1px var(--orange);
    --border-radius: 10px;
    /* Triangle parameters */
    --height: 32em;
    --width: 10em;
}

.body-wrapper {
    display: grid;
    grid-template-columns: auto;
    grid-template-areas: "banner" "content" "footer";
    background-color: var(--black);
    /* background: linear-gradient(90deg, var(--purple) 50%, var(--green) 50%); */
}

.main-wrapper {
    display: grid;
    grid-template-columns: 3fr 2fr;
    grid-template-areas: "hero usp" "content content";
}

main {
    display: flex;
    justify-self: center;
    max-width: 1500px;
    margin-top: 4rem;
}

/* mobile portrait layout */

@media (max-width: 550px) {
    .main-wrapper {
        grid-template-columns: auto;
        grid-template-rows: auto 12rem auto;
        grid-template-areas: "hero" "usp" "content";
    }
    h1 {
        font-size: 36pt;
    }
    nav>a {
        padding: 0px;
    }
    .payment-plan {
        margin: 1rem 0 1rem 0;
        width: 50%;
        height: 50%;
    }
    .triangle-bottomright {
        display: none !important;
    }
    .usp>h2 {
        margin-top: 0rem;
    }
    .content {
        border-radius: 0 !important;
    }
    #benefits {
        margin: 0 !important;
        margin-bottom: 3rem !important;
    }
    #video {
        width: 100% !important;
    }
}

/* ultra-wide layout */

@media (min-width: 1500px) {
    #hero-img {
        border-radius: var(--border-radius) 0 0 0;
    }
    .usp {
        border-radius: 0 var(--border-radius) 0 0;
    }
    .content {
        border-radius: 0 0 var(--border-radius) var(--border-radius);
    }
}

.flex {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.banner {
    display: flex;
    flex-direction: column;
    background-color: var(--off-white);
    text-align: center;
    font-size: 3rem;
    padding: 0;
    font-family: 'Righteous', cursive;
    text-shadow: var(--text-shadow);
}

#header-img {
    display: none;
    width: 100%;
    max-width: 80px;
}

nav {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--black);
    text-align: center;
    z-index: 5;
    align-self: start
}

nav>a, nav>p {
    text-decoration: none;
    color: var(--white);
    font-weight: 900;
    padding: 1rem;
}

nav>p {
    padding: 0;
    color: var(--yellow);
    cursor: default;
}

nav>a {
    border-style: solid;
    border-color: var(--black);
}

nav>a:hover {
    background-color: var(--off-black);
}

.usp {
    grid-area: usp;
    background-color: var(--green);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* border box to keep the padding from running out of bounds */
    box-sizing: border-box;
    padding: 2rem;
    text-align: center;
    height: 100%;
    z-index: 3;
}

/* call to action button */

#submit {
    font-size: 24px;
    border-radius: var(--border-radius);
    border-style: unset;
    box-shadow: var(--default-shadow);
    font-weight: 900;
    background-color: var(--yellow);
    color: var(--black);
    padding: 0.5rem;
}

#submit:hover {
    transform: scale(1.05);
    cursor: pointer;
}

input[type="email"] {
    padding: 0.3rem;
    border-radius: var(--border-radius);
}

/* Remove border from clicked things */

*:focus {
    outline: none;
}

img {
    width: 100%;
}

.hero-image {
    grid-area: hero;
    background-color: var(--white);
    display: flex;
}

/* Keeps image magnifier extensions from activating on the image */

#hero-img {
    pointer-events: none;
}

.triangle-bottomright {
    grid-area: hero;
    justify-self: right;
    width: 0;
    height: auto;
    border-bottom: var(--height) solid var(--green);
    border-left: var(--width) solid transparent;
    margin-right: 0px;
}

.content {
    grid-area: content;
    background-color: var(--white);
    padding: 2rem;
}

#benefits {
    margin: 5rem;
}

.promo-wrapper {
    display: flex;
    align-items: center;
}

#video {
    display: flex;
    margin: auto;
    width: 70%;
    border-radius: var(--border-radius);
}

.plan-wrapper {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.payment-plan {
    text-decoration: unset;
    text-align: center;
    color: var(--white);
    background-color: var(--purple);
    border-style: solid;
    border-radius: var(--border-radius);
    border-color: var(--black);
    width: 15rem;
    height: 15rem;
    margin: 1rem;
    box-shadow: var(--default-shadow);
}

.payment-plan:hover {
    transform: scale(1.05);
}

.plan-name {
    font-size: 2rem;
    text-shadow: var(--default-shadow);
}

.plan-price {
    font-weight: 900;
    font-size: 36pt;
    text-shadow: var(--default-shadow);
    margin: 0 0 0 0;
}

footer {
    background-color: var(--black);
    color: var(--white);
    padding: 1rem;
    text-align: center;
}

